--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,18 @@
 #calc{
-    background-color: black,
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    color: white;
 }
+
+#log{
+    font-size: 90px;
+    font-family: "Courier New", Courier, monospace;
+    text-align: right;
+    width: 100%;
+    top:14%;
+    position: relative;
+}
+
+/*
+    background-color: black;*/
