--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,27 @@ table, td, tr{
     border: 1px solid;
 }
 
+tr{
+     height: 14.28%;
+}
+
+td{
+    width: 25%;
+}
 table{
     width: 100%;
     height: 100%;
+}
+
+.button{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    text-align: center;
+    position: relative;
+    padding-top: 10%;
+}
+
+.orange{
+    background:#F19234;    
 }
