--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 #calc{
     background-color: black;
-    width: 100%;
-    height: 100%;
+    width:450px;
+    height: 700px;
 }
 
 #log{
@@ -25,6 +25,8 @@ tr{
 
 td{
     width: 25%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /*'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif*/
+    font-size: 35px
 }
 table{
     width: 100%;
@@ -32,14 +34,47 @@ table{
 }
 
 .button{
-    width: 100%;
-    height: 100%;
+    width: 87%;
+    height: 94%;
     border-radius: 50%;
     text-align: center;
-    position: relative;
-    padding-top: 10%;
-}
+    display: inline-block;
+    padding-top: 15%;
+    margin-left: 7px;
 
+}
 .orange{
     background:#F19234;    
+    color: white;
+}
+
+.gray{
+    background:#A6A6A6;    
+    color: black;
+}
+
+.darkgray{
+    background:#333333;    
+    color: white;
+}
+
+
+.button0 {
+    width: 40%;
+    height: 91%;
+    text-align: left;
+}
+
+#zero{
+    padding: 0%;
+    width: 100%;
+    height: 100%
+}
+
+.circle{
+    height: 90%;
+    width: 45%;
+    border-radius: 50%;
+    position: relative;
+    z-index: 2;
 }
