--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     height: 700px;
 }
 
-#log{
+#logger{
     font-size: 90px;
     font-family: "Courier New", Courier, monospace;
     text-align: right;
@@ -37,6 +37,9 @@ table{
     width: 87%;
     height: 94%;
     border-radius: 50%;
+    border-style: solid;
+    border-color: white;
+    border-width: 0px;
     text-align: center;
     display: inline-block;
     padding-top: 15%;
