--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,21 @@
 #calc{
-    background-color: black;
+    background-color:#000000;
     width:450px;
     height: 700px;
 }
 
 #logger{
-    font-size: 90px;
+    font-size: 100px;
     font-family: "Courier New", Courier, monospace;
     text-align: right;
     width: 100%;
-    position: absolute;
-    
+    position: absolute;    
 }
 
 table, td, tr{
     color:#FFFFFF;
     border-color: white;
-    border: 1px solid;
+    border: 0px solid;
 }
 
 tr{
@@ -26,7 +25,7 @@ tr{
 td{
     width: 25%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /*'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif*/
-    font-size: 35px
+    font-size: 50px
 }
 table{
     width: 100%;
@@ -42,7 +41,7 @@ table{
     border-width: 0px;
     text-align: center;
     display: inline-block;
-    padding-top: 15%;
+    padding-top: 7%;
     margin-left: 7px;
 
 }
@@ -63,21 +62,12 @@ table{
 
 
 .button0 {
-    width: 40%;
-    height: 91%;
-    text-align: left;
-}
-
-#zero{
-    padding: 0%;
-    width: 100%;
-    height: 100%
-}
-
-.circle{
+    width: 88%;
     height: 90%;
-    width: 45%;
-    border-radius: 50%;
-    position: relative;
-    z-index: 2;
+    border-color: white;
+    border-style: solid;
+    border-width: 0px;
+    margin-left: 10px;
+    text-align: left;
+    border-radius: 5em;
 }
