--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,11 @@
 }
 
 #logger{
-    font-size: 100px;
     font-family: "Courier New", Courier, monospace;
     text-align: right;
     width: 100%;
     position: absolute;    
+    overflow:visible;
 }
 
 table, td, tr{
@@ -62,7 +62,7 @@ table{
 
 
 .button0 {
-    width: 88%;
+    width: 74%;
     height: 90%;
     border-color: white;
     border-style: solid;
